# errorgap-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: apm.rs  backtrace.rs  breadcrumbs.rs  client.rs  config.rs  error.rs  filter.rs  lib.rs  logs.rs  notice.rs  tower.rs  tracing.rs
tests/: client.rs
