[package]
name = "errorgap"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Rust notifier for Errorgap error tracking."
license = "MIT"
repository = "https://github.com/errorgaphq/errorgap-rust"
homepage = "https://github.com/errorgaphq/errorgap-rust"
keywords = ["errorgap", "error-tracking", "observability", "tower", "tracing"]
categories = ["development-tools::debugging", "asynchronous"]

[features]
default = ["tower", "tracing"]
tower = ["dep:tower-layer", "dep:tower-service", "dep:http", "dep:http-body", "dep:pin-project-lite"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt", "sync", "macros", "time"] }
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"

# tower feature deps
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
http = { version = "1.1", optional = true }
http-body = { version = "1.0", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# tracing feature deps
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["registry"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.3", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1.6"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tower = { version = "0.4", features = ["util"] }
